--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0",
+    "@types/animejs": "^3.1.6",
+    "@types/js-cookie": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-solid": "^0.7.3"
+    "eslint-plugin-solid": "^0.7.3",
+    "sass": "^1.56.1",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
-    "solid-js": "^1.5.1"
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@solidjs/router": "^0.5.0",
+    "animejs": "^3.2.1",
+    "js-cookie": "^3.0.1",
+    "solid-fa": "^0.1.0",
+    "solid-js": "^1.5.1",
+    "solidjs-lazily": "^0.1.2"
   }
 }
