--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@solidjs/router": "^0.5.0",
     "animejs": "^3.2.1",
+    "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
     "solid-fa": "^0.1.0",
     "solid-js": "^1.5.1",
